# NTOO

./: ._.gitignore  .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.cache/: ._text-generation
app/: ._static  __init__.py  config.py  main.py  models.py
app/routers/: api.py
app/services/: ._face_map.py  bus_tracker.py  city_client.py  face_map.py  face_recognition.py  face_runtime.py  local_state.py  recommendations.py  text_generation_service.py  tts_service.py
app/templates/: index.html
arduino/: README.md  local_bridge_example.ino
arduino/device_node_mcp4725/: device_node_mcp4725.ino
arduino/device_node_mcp4725_vl53l0x/: device_node_mcp4725_vl53l0x.ino
arduino/device_node_with_id/: device_node_with_id.ino
arduino/esp32_cam_face_node/: esp32_cam_config_enroll.h  esp32_cam_config_verify.h  esp32_cam_face_node.ino
arduino/weather_node_iotik32a/: weather_node_iotik32a.ino
config/: reference-data.json  team.json
configs/: devices.json  mfc_services.json  route_graph.json  signals.json  team_config.yaml
data/: city_status.sample.json  route_playback_face_sequence_1_2_3_4.example.json  route_playback_face_sequence_2_3.example.json  route_playback_face_verify.example.json  topology.example.json  users.example.json
data/faces/: README.md
firmware/nav_point_type1/: config.h  nav_point_type1.ino
tests/: test_api.py  test_city_state_poller.py  test_congestion_engine.py  test_deepseek_route_parser.py  test_eta_engine.py  test_face_map.py  test_face_recognition.py  test_route_engine.py  test_scenario_engine.py
(+42 files in other folders)
